Changes Image Marker Url

--- a/leaflet/index.html
+++ b/leaflet/index.html
@@ -34,7 +34,7 @@
 
 			//Custom w3w map marker
 		var w3wIcon = L.icon({
-				iconUrl: '../images/marker.png',
+				iconUrl: 'http://map.what3words.com/images/map/marker.png',
 				iconSize:     [90, 90], // size of the icon
 				iconAnchor:   [45, 90], // point of the icon which will correspond to marker's location
 				popupAnchor:  [0, -90] // point from which the popup should open relative to the iconAnchor
